package com.example.tictactoe.utils

object TestTags {
    const val TOPBAR = "TopAppBar"
    const val BOARD = "Board"
    const val CELL = "Cell"
    const val INFO_TEXT = "InfoText"
    const val SNACKBAR = "Snackbar"
    const val RESET_BUTTON = "ResetButton"

}